refactor:improve logs
To better understand what is going on during the login/auth flows

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,3 +18,8 @@ jwt.expiration=86400000
 app.oauth2.redirectUri=${FRONTEND_URL}
 
 app.cors.allowed-origins=${FRONTEND_URL}
+
+# Logging configuration
+logging.level.com.rmmcosta.spring_security_kata=DEBUG
+logging.level.org.springframework.security=DEBUG
+logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n
